--- a/CSS/picture-grid.css
+++ b/CSS/picture-grid.css
@@ -1,5 +1,6 @@
+
 .picture-grid{
   display:grid;
- 
+ grid-template-columns: repeat(5,13rem);
 
 }
