--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,9 +8,7 @@ body{
 }
 .outermost-container{
  height:200vh; 
- display:flex;
- flex-direction: column;
- align-items: center;
+
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 650;
  width:90rem;
